--- a/code/PhotoManipulator/PhotoManipulator.csproj
+++ b/code/PhotoManipulator/PhotoManipulator.csproj
@@ -13,7 +13,7 @@
     <RootNamespace>PhotoService</RootNamespace>
     <AssemblyName>PhotoService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <!--<UseIISExpress>false</UseIISExpress>-->
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
